# nf-interpreter

./: CMakePresets.json  azure-pipelines.yml
targets/AzureRTOS/ST/: CMakeLists.txt
targets/AzureRTOS/ST/ORGPAL_PALTHREE/: CMakeLists.txt  CMakePresets.json  stm32f7xx_hal_conf.h  target_external_memory.c  target_ux_user.h
targets/AzureRTOS/ST/ORGPAL_PALTHREE/common/: CMakeLists.txt  startup_stm32f769nihx.s  tx_initialize_low_level.S  tx_initialize_low_level.s  usb_otg.c  ux_stm32_config.h  wp_uart_config.h
targets/AzureRTOS/ST/ORGPAL_PALTHREE/nanoBooter/: STM32F76xx_booter-DEBUG.ld  main.c
targets/AzureRTOS/ST/ORGPAL_PALTHREE/nanoCLR/: STM32F76xx_CLR-DEBUG.ld  main.c
targets/AzureRTOS/ST/ORGPAL_PALX/: CMakeLists.txt  target_fx_user.h  target_system_io_filesystem_config.h
targets/AzureRTOS/ST/ORGPAL_PALX/nanoCLR/: main.c
targets/AzureRTOS/ST/ST_STM32H735G_DK/: CMakeLists.txt  CMakePresets.json  launch.json  stm32h7xx_hal_conf.h  target_common.h.in
targets/AzureRTOS/ST/ST_STM32H735G_DK/common/: CMakeLists.txt  Device_BlockStorage-DEBUG.c  (+3 more)
targets/AzureRTOS/ST/_common/: CMakeLists.txt  LaunchCLR.c  Target_BlockStorage_STM32FlashDriver.c  Target_Windows_Storage.c  WireProtocol_HAL_Interface.c  nanoSupport_CRC32.c  rules_code.ld  rules_data.ld  syscalls.c  targetHAL_ConfigurationManager.cpp
targets/AzureRTOS/ST/_include/: Target_BlockStorage_STM32FlashDriver.h  targetPAL.h
targets/AzureRTOS/ST/_nanoBooter/: WireProtocol_MonitorCommands.c
targets/AzureRTOS/ST/_nanoCLR/: targetHAL_Power.c  targetHAL_Time.cpp  targetPAL.c  target_platform.h.in
(+67 files in other folders)
